# client-s3

./: .gitignore  components.json  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: commands.rs  mod.rs
src-tauri/src/s3/: commands.rs  mod.rs  types.rs
src/assets/: style.css
src/components/browser/: BookmarkList.vue  BreadcrumbNav.vue  BucketList.vue  DropOverlay.vue  ObjectBrowser.vue  TransferPanel.vue
src/components/command/: CommandPalette.vue
src/components/dialogs/: CreateBucketDialog.vue  CreateFolderDialog.vue  PropertiesDialog.vue  SettingsDialog.vue  ShareDialog.vue  VersionsDialog.vue
src/components/preview/: PreviewSheet.vue
src/components/titlebar/: Titlebar.vue
src/composables/: useDragDrop.ts  useS3.ts  useTransfers.ts  useUpdater.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  fr.ts
src/layouts/: AppLayout.vue  AuthLayout.vue
src/lib/: providers.ts
src/pages/app/: BrowserPage.vue
src/pages/auth/: LoginPage.vue
src/router/: index.ts
src/stores/: bookmarks.ts  browser.ts  connection.ts
